# sys_info

./: Cargo.toml  README.md
src/: lib.rs
src/linux/: cpu.rs  gui.rs  kernel.rs  mod.rs  network.rs
src/linux/files/: cpuinfo.rs  meminfo.rs  mod.rs  os_release.rs
